# word-doc-qa

./: .gitignore  Cargo.toml
checkpoints/: metrics.json  vocab.json
docs/: REPORT.md
src/: config.rs  data.rs  inference.rs  main.rs  model.rs  training.rs
word-doc-qa/: .gitignore  Cargo.toml  README.md
word-doc-qa/src/: data.rs  inference.rs  model.rs  tokenizer.rs  training.rs
