[package]
name = "word-doc-qa"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.20.1", features = ["train", "wgpu", "autodiff", "ndarray"] }
docx-rs = "0.4"
tokenizers = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
burn = { version = "0.20.1", features = ["std"] }
